# mlrp-course

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: classical_heuristics_experiment.py  create_mdp_video.py  create_pomdp_video.py  experience_replay_experiment.py  num_control_points_experiment.py  predictive_sampling_experiment.py  trajopt_experiment.py  visualize_gradient_descent_double_integrator.py  visualize_newtons_method.py  visualize_pendulum.py  visualize_policy_iteration.py  visualize_prm.py  visualize_rrt.py  visualize_value_iteration.py
src/mlrp_course/: agent.py  agents.py  structs.py  utils.py
src/mlrp_course/algorithms/: expectimax_search.py  finite_horizon_dp.py  mcts.py  policy_evaluation.py  policy_iteration.py  q_learning.py  rtdp.py  sparse_sampling.py  value_iteration.py
src/mlrp_course/classical/: classical_problem.py  utils.py
src/mlrp_course/mdp/: chase_mdp.py  discrete_mdp.py  marshmellow_mdp.py  utils.py
src/mlrp_course/motion/: motion_planning_problem.py  utils.py
src/mlrp_course/pomdp/: discrete_pomdp.py  utils.py
src/mlrp_course/trajopt/: trajopt_problem.py  utils.py
tests/: test_utils.py
tests/algorithms/: test_expectimax_search.py  test_finite_horizon_dp.py  test_mcts.py  test_policy_evaluation.py  test_policy_iteration.py  test_q_learning.py  test_rtdp.py  test_sparse_sampling.py  test_value_iteration.py
tests/mdp/: test_chase_mdp.py  test_marshmellow_mdp.py  test_mdp_utils.py  test_zits_mdp.py
tests/motion/: test_motion_utils.py
tests/pomdp/: test_pomdp_utils.py
(+62 files in other folders)
