[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mlrp_course"
version = "0.1.0"
description = "A basic starter for Python packages."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
   "matplotlib",
   "numpy==1.26.4",
   "imageio",
   "imageio-ffmpeg",
   "sympy",
   "scikit-image",
   "scipy",
   "tqdm",
   "types-tqdm",
   "gymnasium",
   "pandas",
   "pandas-stubs",
   "relational_structs@git+https://github.com/tomsilver/relational-structs.git",
   "tomsgeoms2d@git+https://github.com/tomsilver/toms-geoms-2d.git",
   "spatialmath-python",
   "jax",
   "jaxlib",
   "jaxopt",
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mlrp_course = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
py_version = 310
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*"]
split_on_trailing_comma = true

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = ["venv/*"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "scipy.*",
    "spatialmath.*",
    "jaxopt.*",
]
ignore_missing_imports = true
